--- a/Content/DM Glossary.htm
+++ b/Content/DM Glossary.htm
@@ -225,8 +225,12 @@
                     <td class="TableStyle-standard-BodyD-Column2-Body1">A generic term covering ToolsGroup JustEnough propriety calculations and operations relating to Allocation and Replenishment.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">Excess For Redistribution</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">Excess in inventory that can be moved from one site to another to address need and reduce the impact of lost sales.</td>
+                </tr>
+                <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Floor Set</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">(Used interchangeably with Product Update) A planned and organized activity that typically occurs periodically, such as weekly, bi-weekly, or monthly, depending on the store's strategy and the type of products being sold. The goal of a floorset is to create an appealing and enticing shopping environment for customers while showcasing the store's latest products, promotions, or seasonal offerings. See Product Update.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">(Used interchangeably with Product Update) A planned and organized activity that typically occurs periodically, such as weekly, bi-weekly, or monthly, depending on the store's strategy and the type of products being sold. The goal of a floor set is to create an appealing and enticing shopping environment for customers while showcasing the store's latest products, promotions, or seasonal offerings. See Product Update.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Flow Cadence</td>
