--- a/Content/Topics/Allocations/Allocate Strategy DC Site Details tab.htm
+++ b/Content/Topics/Allocations/Allocate Strategy DC Site Details tab.htm
@@ -5,12 +5,12 @@
     <body>
         <h1>Stock holding information for distribution centers</h1>
         <p>The <span class="Emphasis">Allocate Strategy DC Site Details</span> tab displays stock holding information for the sites which have been designated as distribution centers as part of the setup configuration. This information can be used to help drive the formation of allocation strategies. </p>
-        <p>A grid displays distribution center level details relating to strategies.</p>
+        <p>The left grid displays distribution center level details relating to strategies.</p>
         <p>
             <img src="../../Resources/Images/Allocations/Allocate Strategy DC Site Details tab.png" class="LargeImages" />
         </p>
-        <p>DC level weeks of cover values are managed by entering a value in the <span class="Emphasis">WOC</span> field and clicking <span class="Emphasis">Save</span>. </p>
-        <p>A detailed read-only Item Master (size) level breakdown is also available.</p>
+        <p class="BasicNote">DC level weeks of cover values are managed by entering a value in the <span class="Emphasis">WOC</span> field and clicking <span class="Emphasis">Save</span>. </p>
+        <p>A detailed read-only Item Master (size) level breakdown is also available via the <span class="Emphasis">Allocate Strategy DC&#160;Site Details Breakdown</span> grid.</p>
         <p>
             <img src="../../Resources/Images/Allocations/Allocate Strategy DC Site Details_grid.png" class="LargeImages" />
         </p>
