--- a/Content/Topics/Allocations/Product Groups.htm
+++ b/Content/Topics/Allocations/Product Groups.htm
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
-    <head>
-        <title>
-        </title>
+    <head><title></title>
     </head>
     <body>
-        <h1>Product Groups screen</h1>
+        <h1>Product Groups</h1>
         <p>The <span class="Emphasis">Product Groups</span> screen is used to distribute inventory outside of the product hierarchy. Users can allocate hierarchy independent collections or sets or deal with mismatched and excess inventory for clearance purposes. </p>
         <p>
             <img src="../../Resources/Images/Allocations/Product_Groups_screen.png" class="LargeImages" />
