--- a/Content/Topics/Adaptive Allocations/Potential Allocation Quantities.htm
+++ b/Content/Topics/Adaptive Allocations/Potential Allocation Quantities.htm
@@ -20,10 +20,10 @@
             <li><span class="Emphasis">Item Master Description</span> – The description for the item master. </li>
             <li><span class="Emphasis">Size Name</span> – The unique code for the size. This is unique by item master and can be removed from the view if sufficient information exists to describe size in the item master code or item master description. </li>
             <li><span class="Emphasis">Size Description</span> – The description for the size. </li>
-            <li><span class="Emphasis">Allocation Quantity Value</span> – The value in base currency of the allocation quantity units. </li>
-            <li><span class="Emphasis">Allocation Quantity Units</span> – The calculated quantity of units to be allocated as the result of the scenario plan. </li>
-            <li><span class="Emphasis">Store On Hand Value</span> – The value in base currency of the store on-hand units. </li>
-            <li><span class="Emphasis">Store On Hand Units</span> – The quantity of units on-hand at the store at the time of scenario calculation.</li>
+            <li><span class="Emphasis">Allocated Value</span> – The value in base currency of the allocation quantity units. </li>
+            <li><span class="Emphasis">Allocated Units</span> – The calculated quantity of units to be allocated as the result of the scenario plan. </li>
+            <li><span class="Emphasis">On Hand Value</span> – The value in base currency of the store on-hand units. </li>
+            <li><span class="Emphasis">On Hand Units</span> – The quantity of units on-hand at the store at the time of scenario calculation.</li>
         </ul>
     </body>
 </html>
