--- a/Content/Topics/Assortment Planning/Managing Plans and Set Defaults.htm
+++ b/Content/Topics/Assortment Planning/Managing Plans and Set Defaults.htm
@@ -65,7 +65,7 @@
         </p>
         <p>For descriptions of buttons and fields, see <MadCap:xref href="Snapshot Tab.htm">Snapshot Tab </MadCap:xref>.</p>
         <h2><a name="Defaults"></a>Defaults </h2>
-        <p>Launches the <span class="Emphasis">Manage Assortment Defaults</span> view for the current plan. Users can set default parameters for plan elements and functions used frequently within Assortment Planning so they do not have to be manually set each time. Default parameters can generally still be changed later by the user if needed.</p>
+        <p>Launches the <span class="Emphasis">Manage Assortment Defaults</span> view for the current plan. Users can set default parameters for plan elements and functions used frequently within Assortment Planning so they do not have to be manually set each time. Default parameters can generally still be changed later by users if needed.</p>
         <p>Defaults set here are applied to placeholders assigned to the specified level of the product hierarchy at the time of generation, whether manually within the main planning view or through the Smart Start function.</p>
         <p>Defaults are set in an inheritance scheme, meaning defaults set at higher levels of the product hierarchy persist down through the levels beneath unless different defaults are set at those lower levels as exceptions.</p>
         <p class="BasicNote">Changing defaults in this screen does not alter settings for placeholders that already exist.</p>
