--- a/Content/Topics/Inventory Forecasts/Forecast screen toolbar.htm
+++ b/Content/Topics/Inventory Forecasts/Forecast screen toolbar.htm
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <title>
-        </title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Forecast screen toolbar</h1>
@@ -54,11 +52,9 @@
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         <ul>
-                            <li>
-                                <span class="Emphasis">Lock</span>. Allows users to include or exclude certain forecasting methods from being run for the inventory item. A lock expiration must be set to determine the period of time for which the lock is intended to cover.
+                            <li><span class="Emphasis">Lock</span>. Allows users to include or exclude certain forecasting methods from being run for the inventory item. A lock expiration must be set to determine the period of time for which the lock is intended to cover.
 							<p><img src="../../Resources/Images/Demand Forecasting/Forecast Task Locked.PNG" class="LargeImages" /></p></li>
-                            <li>
-                                <span class="Emphasis">Unlock</span>. If a forecast has had a method lock applied, the <span class="Emphasis">Unlock</span> button displays allowing users to remove the method lock.</li>
+                            <li><span class="Emphasis">Unlock</span>. If a forecast has had a method lock applied, the <span class="Emphasis">Unlock</span> button displays allowing users to remove the method lock.</li>
                         </ul>
                     </td>
                 </tr>
@@ -107,6 +103,10 @@
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                     Launches the <span class="Emphasis">Visible Bucket Period Limits</span> dialog. This determines the number of periods which display in both the graph and grid sections of the forecast viewer. Depending on the period type (daily, weekly, or monthly) the visible bucket period limits can be adjusted to take a bigger picture look at the inventory item, or narrow the focus if so desired. 
                     </td>
+                </tr>
+                <tr class="TableStyle-standard-Body-Body1">
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">Series Configuration</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">Based on user rights, within the forecast viewer, provides the option to select the colors of the various available series within the graph. Choices can be saved at the user preference level so that individual users can select a color palette which is most visually appealing and accessible for them. </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">
